--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,63 @@
-*{
-      margin: 0;
-      padding: 0;
+.rrss{
+      display: flex;
+      list-style: none;
+      text-decoration: none;
+      flex-direction: row;
+      justify-content: right;
+      
+      }
+
+.Facebook{
+      background-color:rgba(59, 89, 152,0.8) ;
+      border-radius: 20px;
+      color: white;
+      padding: 5px;
+      text-decoration: none;
+      margin: 10px;
+      box-shadow: 5px 5px 8px grey;
+
+}
+.Twitter{
+      background-color:rgba(0, 172, 238,0.8) ;
+      border-radius: 20px;
+      color: white;
+      padding: 5px;
+      text-decoration: none;
+      margin: 10px;
+      box-shadow: 5px 5px 8px grey;
+}
+.Instagram{
+      background-color:rgba(221, 41, 123,0.8) ;
+      border-radius: 20px;
+      color: white;
+      padding: 5px;
+      text-decoration: none;
+      margin: 10px;
+      box-shadow: 5px 5px 8px grey;
+}
+.WhatsApp{
+      background-color:rgba(0, 187, 45, 0.8) ;
+      border-radius: 20px;
+      color: white;
+      padding: 5px;
+      text-decoration: none;
+      margin: 10px;
+      box-shadow: 5px 5px 8px grey;
+}
+.datosDeContacto{
+      color: #575050;
+      text-align:center ;
+      margin: 5px;
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.espacio{
+      margin-top: 330px;
+}
+.lorem{
+      text-align: center;
+      margin-top: 150px;
+
+}
+.espacioBanner{
+      margin-bottom: 100px;
 }
