--- a/Scss/_rrss.scss
+++ b/Scss/_rrss.scss
@@ -3,14 +3,15 @@
     list-style: none;
     text-decoration: none;
     flex-direction: row;
-    justify-content: right;
+    justify-content: center;
+    margin-top: 25px;
 }
 
 .Facebook{
     background-color:rgba(59, 89, 152,0.8) ;
     border-radius: 20px;
     color: white;
-    padding: 5px;
+    padding: 8px;
     text-decoration: none;
     margin: 10px;
     box-shadow: 5px 5px 8px grey;
@@ -19,7 +20,7 @@
     background-color:rgba(0, 172, 238,0.8) ;
     border-radius: 20px;
     color: white;
-    padding: 5px;
+    padding: 8px;
     text-decoration: none;
     margin: 10px;
     box-shadow: 5px 5px 8px grey;
@@ -28,7 +29,7 @@
     background-color:rgba(221, 41, 123,0.8) ;
     border-radius: 20px;
     color: white;
-    padding: 5px;
+    padding: 8px;
     text-decoration: none;
     margin: 10px;
     box-shadow: 5px 5px 8px grey;
@@ -37,8 +38,8 @@
     background-color:rgba(0, 187, 45, 0.8) ;
     border-radius: 20px;
     color: white;
-    padding: 5px;
+    padding: 8px;
     text-decoration: none;
-    margin: 10px;
+    margin:10px;
     box-shadow: 5px 5px 8px grey;
 }
