Agregado y Actualiazciòn del proyecto

--- a/style.scss
+++ b/style.scss
@@ -3,3 +3,6 @@
 @import './Scss/rrss';
 @import './Scss/datosdecontacto';
 @import './Scss/nombrecliente';
+@import './Scss/header';
+@import './Scss/main';
+@import './Scss/footer';
