--- a/Scss/_header.scss
+++ b/Scss/_header.scss
@@ -1,3 +1,38 @@
-.rowNavRight{
-   align-items: end;
+header {
+      nav {
+         div{
+             ul{
+                li {
+                   margin-left: 10px;
+                                 a {
+                                    &:hover{
+                                       text-decoration: underline;
+                                       margin: 10px 0;
+                                       transition: 0.4s all ease;
+
+                   }
+               }
+            }
+         }
+      }
+   }
+}
+@media(min-width: $lg){
+   header {
+      nav {
+         div{
+             ul{
+                li {
+                   a {
+                     &:hover{
+                     text-decoration: underline;
+                     margin: 0 0;
+
+                      }
+                  }
+               }
+            }
+         }
+      }
+   }
 }
