--- a/style.scss
+++ b/style.scss
@@ -1,8 +1,9 @@
+@import './Scss/Variables';
 @import './Scss/global';
-@import './Scss/espaciados';
-@import './Scss/rrss';
-@import './Scss/datosdecontacto';
-@import './Scss/nombrecliente';
 @import './Scss/header';
 @import './Scss/main';
 @import './Scss/footer';
+
+
+@import './Scss/espaciados';
+
