Modoficación dirección a Index y CSS

--- a/Scss/_header.scss
+++ b/Scss/_header.scss
@@ -1,38 +1,36 @@
 header {
-      nav {
-         div{
-             ul{
-                li {
-                   margin-left: 10px;
-                                 a {
-                                    &:hover{
-                                       text-decoration: underline;
-                                       margin: 10px 0;
-                                       transition: 0.4s all ease;
-
-                   }
-               }
+  nav {
+    div {
+      ul {
+        li {
+          margin-left: 10px;
+          a {
+            &:hover {
+              text-decoration: none;
+              margin: 10px 0;
+              transition: 0.4s all ease;
             }
-         }
+          }
+        }
       }
-   }
+    }
+  }
 }
-@media(min-width: $lg){
-   header {
-      nav {
-         div{
-             ul{
-                li {
-                   a {
-                     &:hover{
-                     text-decoration: underline;
-                     margin: 0 0;
-
-                      }
-                  }
-               }
+@media (min-width: $lg) {
+  header {
+    nav {
+      div {
+        ul {
+          li {
+            a {
+              &:hover {
+                text-decoration: underline;
+                margin: 0 0;
+              }
             }
-         }
+          }
+        }
       }
-   }
+    }
+  }
 }
