Final definitivo Entrega Proyecto Final Volonté Pablo

--- a/Scss/_Variables.scss
+++ b/Scss/_Variables.scss
@@ -1,8 +1,17 @@
-$facebookColor :rgba(59, 89, 152,0.8);
-$twitterColor :rgba(0, 172, 238,0.8);
-$instagramColor :rgba(221, 41, 123,0.8) ;
-$WhatsappColor:rgba(0, 187, 45, 0.8) ;
-$BotonRrss:20px;
-$textoRrss:#fff;
+$facebookColor: #3b5998cc;
+$twitterColor: #00aceecc;
+$instagramColor: #dd297bcc;
+$WhatsappColor: #00bb2dcc;
+$BotonRrss: 20px;
+$textoRrss: #fff;
+$xs: 0px;
+$sm: 576px;
+$md: 768px;
 $lg: 992px;
-$sm:991px;
+$xl: 1200px;
+$xxl: 1400px;
+$Distance: 15px;
+$Backgroundeee: #eee;
+$textGray: #474b4e;
+$rrssMobileSize: 30px;
+$fontsize: 25px;
