--- a/Scss/_footer.scss
+++ b/Scss/_footer.scss
@@ -1,85 +1,93 @@
-footer{
-    ol{
-        display: flex;
-        list-style: none;
-        text-decoration: none;
-        flex-direction: row;
-        justify-content: center;
-        margin: 25px;
-    }
-}
-
-.Facebook{
-    background-color: $facebookColor;
-    border-radius: $BotonRrss;
-    color: $textoRrss;
-    padding: 8px;
-    text-decoration: none;
-    margin: 5px;
-    box-shadow: 5px 5px 8px grey;
-    &:hover{
-        font-style: italic;
-        color: #fff;
-    }
-}
-.Twitter{
-    background-color: $twitterColor;
-    border-radius: $BotonRrss;
-    color: $textoRrss;
-    padding: 8px;
-    text-decoration: none;
-    margin: 5px;
-    box-shadow: 5px 5px 8px grey;
-    &:hover{
-        font-style: italic;
-        color: #fff;
-    }
-}
-.Instagram{
-    background-color:$instagramColor ;
-    border-radius:$BotonRrss;
-    color: $textoRrss;
-    padding: 8px;
-    text-decoration: none;
-    margin: 5px;
-    box-shadow: 5px 5px 8px grey;
-    &:hover{
-        font-style: italic;
-        color: #fff;
-    }
-}
-.WhatsApp{
-    background-color:$WhatsappColor;
-    border-radius: $BotonRrss;
-    color: $textoRrss;
-    padding: 8px;
-    text-decoration: none;
-    margin:5px;
-    box-shadow: 5px 5px 8px grey;
-    &:hover{
-        font-style: italic;
-        color: #fff;
-    }
-}
-.datosDeContacto{
-    color: #575050;
-    text-align:center ;
-    margin: 5px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-@media(max-width: $sm){
-    footer{
-        div{
-            section{
-                nav{
-                    div{
-                        button{
-                        display: none;
-                        }
-                    }
-                }
-            }
-        }
-    }
-
+footer {
+	ol {
+		display: flex;
+		list-style: none;
+		text-decoration: none;
+		justify-content: center;
+		padding: 8px 0 20px 0;
+	}
+	li {
+		margin: 0 10px;
+	}
+	.button {
+		display: none;
+	}
+	.rrssIcon {
+		display: none;
+		align-items: center;
+		&:hover {
+			stroke: $textGray;
+		}
+	}
+	.Facebook {
+		border: 2px solid $facebookColor;
+		border-radius: $BotonRrss;
+		color: $facebookColor;
+		padding: 8px;
+		text-decoration: none;
+		box-shadow: 5px 5px 8px grey;
+		&:hover {
+			font-weight: bold;
+		}
+	}
+	.Twitter {
+		border: 2px solid $twitterColor;
+		border-radius: $BotonRrss;
+		color: $twitterColor;
+		padding: 8px;
+		text-decoration: none;
+		margin: 5px;
+		box-shadow: 5px 5px 8px grey;
+		&:hover {
+			font-weight: bold;
+		}
+	}
+	.Instagram {
+		border: 2px solid $instagramColor;
+		border-radius: $BotonRrss;
+		color: $instagramColor;
+		padding: 8px;
+		text-decoration: none;
+		margin: 5px;
+		box-shadow: 5px 5px 8px grey;
+		&:hover {
+			font-weight: bold;
+		}
+	}
+	.WhatsApp {
+		border: 2px solid $WhatsappColor;
+		border-radius: $BotonRrss;
+		color: $WhatsappColor;
+		padding: 8px;
+		text-decoration: none;
+		margin: 5px;
+		box-shadow: 5px 5px 8px grey;
+		&:hover {
+			font-weight: bold;
+		}
+	}
+	.copyright {
+		color: $textGray;
+		text-align: center;
+		font-size: 13px;
+		margin: 5px;
+		font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+	}
+	@media (max-width: $lg) {
+		.WhatsApp {
+			display: none;
+		}
+		.Facebook {
+			display: none;
+		}
+		.Instagram {
+			display: none;
+		}
+		.Twitter {
+			display: none;
+		}
+		.rrssIcon {
+			display: inline-block;
+		}
+	}
 }
