--- a/style.scss
+++ b/style.scss
@@ -1,9 +1,5 @@
-@import './Scss/Variables';
-@import './Scss/global';
-@import './Scss/header';
-@import './Scss/main';
-@import './Scss/footer';
-
-
-@import './Scss/espaciados';
-
+@import "./Scss/Variables";
+@import "./Scss/global";
+@import "./Scss/header";
+@import "./Scss/main";
+@import "./Scss/footer";
