--- a/Scss/_global.scss
+++ b/Scss/_global.scss
@@ -1,11 +1,13 @@
 @font-face {
-    font-family: 'ubuntu';
-    src: url('../ttf/Ubuntu/Ubuntu-Light.ttf');
+	font-family: "ubuntu";
+	src: url("../ttf/Ubuntu/Ubuntu-Light.ttf");
 }
-*{
-    padding: 0;
-    margin: 0;
+* {
+	padding: 0;
+	margin: 0;
 }
-body{
-    font-family: ubuntu ;
+body {
+	font-family: ubuntu;
+	max-width: auto;
+	height: 100vh;
 }
